--- a/dream-travels/src/ components/button/button.scss
+++ b/dream-travels/src/ components/button/button.scss
@@ -1,6 +1,6 @@
-.dream-trips-button{
-    width: 156px;
-    height: 48px;
-    padding: var(--spacingspacing-lg);
-    border-radius: 100px;
+.dream-trips-button {
+  width: 156px;
+  height: 48px;
+  padding: 12px;
+  border-radius: 100px;
 }
