--- a/dream-travels/src/ components/nav/nav.scss
+++ b/dream-travels/src/ components/nav/nav.scss
@@ -1,9 +1,11 @@
-.dream-trips-nav{
-    width: 928px;
-    height: 80px;
-    padding: var(--spacingspacing-xl);
-    gap: 10px;
-    border-radius: var(--radiusradius-md);
-    opacity: 0px;
-
+.dream-trips-nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 80px;
+  padding: 16px;
+  border-radius: 16px;
+  background-color: black;
+  margin: 30px;
 }
