--- a/dream-travels/src/App.css
+++ b/dream-travels/src/App.css
@@ -1,3 +1,9 @@
-#root {
-  max-width: 1280px;
+body {
+  width: 100%;
+  margin: -8px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.main-view {
+  padding: 60px 47px 60px 60px;
 }
