--- a/dream-travels/src/ components/nav/nav.scss
+++ b/dream-travels/src/ components/nav/nav.scss
@@ -2,10 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 98%;
   height: 80px;
   padding: 16px;
   border-radius: 16px;
   background-color: black;
-  margin: 30px;
+  // margin: 30px;
 }
