--- a/src/ components/input/input.scss
+++ b/src/ components/input/input.scss
@@ -1,9 +1,9 @@
 .dream-trips-input {
   max-width: 100%;
+  min-width: 150px;
   width: 98%;
   height: 48px;
   padding: 12px 16px 12px 16px;
-  gap: 10px;
   border-radius: 100px;
   border: 1px solid #ccc;
 }
