--- a/src/ components/itinerary-input/itinerary-input.scss
+++ b/src/ components/itinerary-input/itinerary-input.scss
@@ -5,12 +5,11 @@
   padding: 12px 16px 12px 16px;
   gap: 10px;
   border-radius: 100px;
-  min-width: 100px;
 }
 
 .itinerary-input-left {
   width: 20%;
-  margin-top: 15px;
+  margin: 10px;
 }
 
 .itinerary-input-main {
