--- a/src/ components/trip-card/trip-card.scss
+++ b/src/ components/trip-card/trip-card.scss
@@ -1,6 +1,6 @@
 .dream-trip-card {
   width: 100%;
-  height: 300px;
+  height: auto;
   border-radius: 16px;
   border: 1px solid grey;
   display: flex;
