update global margins

--- a/src/ components/nav/nav.scss
+++ b/src/ components/nav/nav.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 98%;
+  width: auto;
   height: 80px;
   padding: 16px;
   border-radius: 16px;
