--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 body {
-  width: 100%;
-  margin: -8px;
   font-family: "Montserrat", sans-serif;
 }
 
 .main-view {
-  padding: 60px 47px 60px 60px;
+  padding: 40px;
 }
