--- a/src/ components/trip-modal-edit/trip-modal-edit.scss
+++ b/src/ components/trip-modal-edit/trip-modal-edit.scss
@@ -2,8 +2,8 @@
   max-width: 100%;
   width: auto;
   max-height: 90vh;
-  top: 100px;
-  left: 1224px;
+  margin-left: 20px;
+  margin-right: 20px;
   border-radius: 16px;
   background-color: white;
   font-family: "Montserrat", sans-serif;
