--- a/src/ components/trip-modal/trip-modal.scss
+++ b/src/ components/trip-modal/trip-modal.scss
@@ -3,6 +3,8 @@
   width: auto;
   max-height: 90vh;
   border-radius: 16px;
+  margin-left: 20px;
+  margin-right: 20px;
   background-color: white;
   font-family: "Montserrat", sans-serif;
   overflow-y: auto;
