--- a/src/ components/itinerary-item/itinerary-item-mid.scss
+++ b/src/ components/itinerary-item/itinerary-item-mid.scss
@@ -22,8 +22,8 @@
 }
 
 .itinerary-item-mid-vertical-line {
-  width: 2px;
-  height: 100px;
+  width: 3px;
+  height: auto;
   background-color: black;
   margin: 0px 20px 0px 20px;
   position: relative;
@@ -36,6 +36,6 @@
   border-radius: 50%;
   position: absolute;
   left: 50%;
-  top: 12%;
+  top: 9%;
   transform: translate(-50%, -50%);
 }
